# invoice-auditor

./: .gitignore  CLAUDE.md  README.md  app.py  config.toml  pyproject.toml
core/: auditor.py  cvr_manager.py  schema.py  vat_lookup.json  vat_manager.py
data/lookup_dicts/: vat_lookup.json
src/invoice_auditor/: config.py
src/invoice_auditor/agent/: auditor.py  prompt.py
src/invoice_auditor/api/: cvr_manager.py
src/invoice_auditor/core/: cvr_manager.py  schema.py  vat_manager.py
src/invoice_auditor/processing/: image.py  post_audit.py
