[project]
name = "invoice-auditor"
version = "0.1.0"
description = "AI-Powered CFO for Danish SMEs. An intelligent, human-in-the-loop invoice auditor that handles split-VAT logic, CVR compliance, and automated data extraction."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.4",
    "httpx>=0.28.1",
    "pydantic-ai",
    "pillow",
    "streamlit>=1.53.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
